# circom

./: .gitignore
circom/: Cargo.toml
circom/src/: compilation_user.rs  execution_user.rs  input_user.rs  main.rs
circom_algebra/src/: algebra.rs  modular_arithmetic.rs
code_producers/src/: lib.rs
code_producers/src/c_elements/: c_code_generator.rs  mod.rs
code_producers/src/c_elements/common/: CMakeLists.txt  main.cpp  makefile
code_producers/src/wasm_elements/: wasm_code_generator.rs
compiler/src/: compiler_interface.rs
compiler/src/circuit_design/: build.rs  circuit.rs  function.rs  template.rs
compiler/src/hir/: analysis_utilities.rs  merger.rs  sugar_cleaner.rs  type_inference.rs
compiler/src/intermediate_representation/: assert_bucket.rs  branch_bucket.rs  call_bucket.rs  compute_bucket.rs  create_component_bucket.rs  ir_interface.rs  load_bucket.rs  log_bucket.rs  loop_bucket.rs  return_bucket.rs  store_bucket.rs  translate.rs  value_bucket.rs
compiler/src/ir_processing/: build_inputs_info.rs
compiler/src/translating_traits/: mod.rs
constraint_generation/src/: compute_constants.rs  execute.rs  lib.rs
constraint_generation/src/environment_utils/: component_representation.rs
constraint_generation/src/execution_data/: executed_program.rs  executed_template.rs
constraint_list/src/: constraint_simplification.rs  lib.rs  r1cs_porting.rs
constraint_writers/src/: json_writer.rs  log_writer.rs  r1cs_writer.rs
dag/src/: constraint_correctness_analysis.rs  lib.rs  map_to_constraint_list.rs  r1cs_porting.rs
(+18 files in other folders)
